--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!-- Font Awesome (ícones) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- Custom CSS -->>
   <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
 
@@ -41,7 +41,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-        <img src="img/LOGO 1.jpg" alt="Logo" width="150px"/>
+        <img src="logo.jpg" alt="Logo" width="120px"/>
         <div>
           <div class="brand-title">Lari Silva</div>
           <small class="text-muted">Nail Design • Unhas em Gel</small>
@@ -54,11 +54,11 @@
 
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto align-items-lg-center">
-          <li class="nav-item"><a class="nav-link" href="#servicos">Serviços</a></li>
-          <li class="nav-item"><a class="nav-link" href="#portifolio">Portfólio</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-          <li class="nav-item ms-3"><a class="btn btn-outline-primary btn-sm" href="#"><i class="fa fa-user me-1"></i> Login</a></li>
-          <li class="nav-item ms-2"><a class="btn btn-primary btn-sm" href="#"><i class="fa fa-shopping-cart me-1"></i> Carrinho (0)</a></li>
+            <li class="nav-item ms-2"><a class="btn btn-primary btn-sm" href="#"></i> Serviços </a></li>
+            <li class="nav-item ms-2"><a class="btn btn-primary btn-sm" href="#"></i> Portifolio</a></li>
+            <li class="nav-item ms-2"><a class="btn btn-primary btn-sm" href="#"></i> Contato</a></li>
+         
+          
         </ul>
       </div>
     </div>
@@ -97,7 +97,7 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card service-card h-100">
-            <img src="img/foto5.png" class="card-img-top" alt="Unhas em gel">
+            <img src="" class="card-img-top" alt="Unhas em gel">
             <div class="card-body">
               <h5 class="card-title">Unhas em Gel</h5>
               <p class="card-text text-muted">Alongamento e acabamento natural com longa duração.</p>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-4">
           <div class="card service-card h-100">
-            <img src="img/foto8.png" class="card-img-top" alt="Fibra de vidro">
+            <img src="foto2.png" class="card-img-top" alt="Fibra de vidro">
             <div class="card-body">
               <h5 class="card-title">Fibra de Vidro</h5>
               <p class="card-text text-muted">Muito resistente e perfeito para alongamentos delicados.</p>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-md-4">
           <div class="card service-card h-100">
-            <img src="img/foto6.png" class="card-img-top" alt="Design">
+            <img src="foto3.png" class="card-img-top" alt="Design">
             <div class="card-body">
               <h5 class="card-title">Design & Nail Art</h5>
               <p class="card-text text-muted">Materiais de alta qualidade para looks modernos e personalizados.</p>
@@ -127,14 +127,14 @@
   </section>
 
   <!-- Portfólio -->
-  <section id="portifolio" class="py-5 bg-light">
+  <section class="portifolio" class="py-5 bg-light">
     <div class="container">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Portfólio</h2>
         <a href="#" class="small">Ver Galeria Completa &raquo;</a>
-        <img src="img/imagem1.png" width="200">
-        <img src="img/foto2.png" width="200">
-        <img src="img/foto3.png" width="198">
+        <img src="foto4.png" width="200">
+        <img src="foto5.png" width="200">
+        <img src="foto6.png" width="198">
 
 
       </div>
@@ -265,6 +265,15 @@
             <button class="btn btn-primary" type="submit">Enviar</button>
           </form>
         </div>
+        <a href="https://wa.me/551997358435?text=Ola, Vim pelo seu site, e gostaria de fazer o Agendamento" 
+         class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Abrir WhatsApp">
+        <!-- SVG do WhatsApp -->
+        <svg viewBox="0 0 32 32" width="22" height="22" aria-hidden="true" focusable="false">
+         <path fill="#fff" d="M16 .5C7.43.5 .5 7.43.5 16c0 2.82.74 5.45 2.14 7.78L.5 31.5l7.99-2.11A15.39 15.39 0 0016 31.5C24.57 31.5 31.5 24.57 31.5 16S24.57.5 16 .5z"/>
+         <path fill="#25D366" d="M16 .5C7.43.5 .5 7.43.5 16c0 2.82.74 5.45 2.14 7.78L.5 31.5l7.99-2.11A15.39 15.39 0 0016 31.5C24.57 31.5 31.5 24.57 31.5 16S24.57.5 16 .5z" opacity="1"/>
+         <path fill="#fff" d="M23.2 20.8c-.4-.2-2.3-1.1-2.6-1.2-.3-.1-.5-.2-.7.2-.3.4-1 1.2-1.3 1.4-.3.2-.5.3-.9.1-1.3-.4-3.1-1.9-4.1-3.5-.3-.5.3-.5.9-1.6.3-.5 0-.9-.1-1.1-.1-.2-.7-1.6-1-2.2-.3-.6-.6-.5-.9-.5-.3 0-.7 0-1.1 0-.4 0-1 .1-1.6.7-.6.6-2 2-2 4.9 0 2.9 2 5.7 2.3 6.1.4.4 4 6.3 10.1 4.4 1.6-.5 2.8-1.6 3.8-2.4.5-.4 2.8-2.4 2.9-4.7.1-2.3-1.1-3.4-1.5-3.7z"/>
+  </svg>
+</a>
 
         <div class="col-lg-6">
           <h5>Localização</h5>
@@ -283,7 +292,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-4 bg-dark text-white">
+  <footer class="py-4 text-black footer">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
@@ -293,9 +302,9 @@
         <div class="col-md-4">
           <h6>Links</h6>
           <ul class="list-unstyled small">
-            <li><a class="text-decoration-none text-white" href="#servicos">Serviços</a></li>
-            <li><a class="text-decoration-none text-white" href="#portifolio">Portfólio</a></li>
-            <li><a class="text-decoration-none text-white" href="#contato">Contato</a></li>
+            <li><a class="text-decoration-none text-black" href="#servicos">Serviços</a></li>
+            <li><a class="text-decoration-none text-black" href="#portifolio">Portfólio</a></li>
+            <li><a class="text-decoration-none text-black" href="#contato">Contato</a></li>
           </ul>
         </div>
         <div class="col-md-4 text-md-end">
